# cdparanoia

./: .gitignore  .main.c.swp  Makefile  Makefile.in  README  buffering_write.c  cachetest.c  cdparanoia  cdparanoia-3.pc  cdparanoia-3.pc.in  cdparanoia.1  cdparanoia.1.jp  cdparanoia.spec  config.status  configure  configure.in  header.c  header.h  main.c  report.c  report.h  version.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.debian  cdparanoia.postinst  cdparanoia.substvars  changelog  control  copyright  docs  files  libcdparanoia0-dev.files  libcdparanoia0.files  libcdparanoia0.shlibs  libcdparanoia0.substvars  rules  watch.ex
interface/: Makefile  Makefile.in  common_interface.c  common_interface.h  cooked_interface.c  drive_exceptions.h  interface.c  libcdda_interface.so.0.10.3pre  low_interface.h  scan_devices.c  scsi_interface.c  smallft.c  smallft.h  test_interface.c  toc.c  utils.h
paranoia/: Makefile  gap.c  libcdda_paranoia.so.0.10.3pre  overlap.c  overlap.h  p_block.c  p_block.h  paranoia.c
samples/: flacify.sh  rip.sh
